created code to build out html file

--- a/templates/manager.html
+++ b/templates/manager.html
@@ -14,12 +14,10 @@
     <script src="./assets/scripts/jquery-3.4.1.min.js"></script>
     <script src="./assets/scripts/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./assets/style/style.css">
-    <script src="./assets/scripts/script.js"></script>
 </head>
 
 <body>
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+    <div id="manager" class="card" style="width: 18rem;">
         <div class="card-body bg-primary text-white">
           <h5 class="card-title">${Employee Name}</h5>
           <p class="card-text"><span><i class="fas fa-mug-hot"></i></span>${Employee Role}</p>
